# internal/dto/ab-dto/is-userIn-feature-reply.go
@@ -1,0 +1,6 @@
+package abDto
+
+type FeatureReply struct {
+	FeatureID   int64
+	FeatureName string
+}
