# internal/handler/ab-microservice/experiments/set-stoped.go
@@ -7,7 +7,7 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-func (h *Handler) SetStopedExperiment(ctx echo.Context, experimentId int64) error {
+func (h *Handler) SetStoppedExperiment(ctx echo.Context, experimentId int64) error {
 	response, err := h.abService.SetStopedExperiment(ctx.Request().Context(), experimentId)
 	if err != nil {
 		return render.FromError(ctx, err)
