# internal/handler/ab-microservice/feature/feature.go
@@ -1,0 +1,25 @@
+package feature
+
+import (
+	"context"
+	"gate-way/internal/dto"
+	abDto "gate-way/internal/dto/ab-dto"
+)
+
+type abService interface {
+	CreateFeature(ctx context.Context, request *abDto.Feature) (*dto.CommonResponse, error)
+	IsFeatureEnabled(ctx context.Context, id int64) (*dto.CommonResponse, error)
+	IsUserInFeature(ctx context.Context, feature *abDto.UserFeatureReq) ([]*abDto.FeatureReply, error)
+	SetFeatureToggleStatus(ctx context.Context, request *abDto.SetFeatureStatus) (*dto.CommonResponse, error)
+	UpdateFeatureToggleRollout(ctx context.Context, request *abDto.UpdateFeature) (*dto.CommonResponse, error)
+}
+
+type Handler struct {
+	abService abService
+}
+
+func New(abService abService) *Handler {
+	return &Handler{
+		abService: abService,
+	}
+}
